[package]
name = "tted"
version = "0.1.0"
edition = "2021"
description = "Render formatted text and emoji using Forma"
authors = ["Benedikt Terhechte"]
license = "MIT"
readme = "README.md"
keywords = ["2d", "rendering", "text", "vector-graphics", "richtext", "emoji"]
categories = ["rendering", "gui"]
repository = "https://github.com/terhechte/tted"
exclude = ["media", "assets", ".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forma = { version = "0.1.0", features = ["gpu"], package = "forma-render" }
pinot = "0.1.5"
winit = "0.27.5"
wgpu = "0.14.0"
pollster = "0.2.5"
parley = { git = "https://github.com/dfrg/parley" }
emoji = "0.2.1"
image = "0.24.5"